Run openrewrite recipe
Issue: 301