@@ -5,7 +5,6 @@ import com.github.muehmar.gradle.openapi.generator.java.model.pojo.JavaPojo;
 import com.github.muehmar.gradle.openapi.generator.settings.PojoSettings;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.EqualsAndHashCode;
 import lombok.ToString;
 
@@ -19,7 +18,7 @@ public class JavaFileName {
   }
 
   public static JavaFileName fromRef(String ref) {
-    return new JavaFileName(Paths.get(ref.replace(".", File.separator) + ".java"));
+    return new JavaFileName(Path.of(ref.replace(".", File.separator) + ".java"));
   }
 
   public static JavaFileName fromSettingsAndPojo(PojoSettings settings, JavaPojo pojo) {
@@ -30,7 +29,7 @@ public class JavaFileName {
     final Path packagePath = settings.getPackageName().asPath();
     final String fileNameString =
         String.format("%s%s%s.java", packagePath.toFile(), File.separator, className);
-    return new JavaFileName(Paths.get(fileNameString));
+    return new JavaFileName(Path.of(fileNameString));
   }
 
   public Path asPath() {
