@@ -1,7 +1,6 @@
 package com.github.muehmar.gradle.openapi.generator.model.specification;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.EqualsAndHashCode;
 import lombok.ToString;
 
@@ -15,7 +14,7 @@ public class MainDirectory {
   }
 
   public static MainDirectory fromString(String dir) {
-    return new MainDirectory(Paths.get(dir));
+    return new MainDirectory(Path.of(dir));
   }
 
   public static MainDirectory fromPath(Path dir) {
