@@ -3,7 +3,6 @@ package com.github.muehmar.gradle.openapi.generator.settings;
 import java.io.File;
 import java.io.Serializable;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.EqualsAndHashCode;
 
 @EqualsAndHashCode
@@ -23,7 +22,7 @@ public class PackageName implements Serializable {
   }
 
   public Path asPath() {
-    return Paths.get(name.replace(".", File.separator).replaceFirst("^" + File.separator, ""));
+    return Path.of(name.replace(".", File.separator).replaceFirst("^" + File.separator, ""));
   }
 
   @Override
