@@ -7,7 +7,7 @@ import com.github.muehmar.gradle.openapi.generator.mapper.resolver.MapResultReso
 import com.github.muehmar.gradle.openapi.generator.model.Pojo;
 import com.github.muehmar.gradle.openapi.generator.model.specification.MainDirectory;
 import com.github.muehmar.gradle.openapi.generator.model.specification.OpenApiSpec;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Comparator;
 
 public class ResourceSchemaMappingTestUtil {
@@ -20,7 +20,7 @@ public class ResourceSchemaMappingTestUtil {
             new SwaggerSpecificationParser(new ResourceSpecificationReader(), "Dto"));
 
     return specificationMapper
-        .map(MainDirectory.fromString(mainDirectory), OpenApiSpec.fromPath(Paths.get(schema)))
+        .map(MainDirectory.fromString(mainDirectory), OpenApiSpec.fromPath(Path.of(schema)))
         .getPojos()
         .sort(Comparator.comparing(pojo -> pojo.getName().getPojoName().asString()));
   }
