@@ -2,12 +2,12 @@ package com.github.muehmar.gradle.openapi.generator.model.schema;
 
 import com.github.muehmar.gradle.openapi.generator.model.specification.OpenApiSpec;
 import io.swagger.v3.oas.models.media.Schema;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class SchemaWrappers {
   private SchemaWrappers() {}
 
   public static SchemaWrapper wrap(Schema<?> wrapper) {
-    return new SchemaWrapper(OpenApiSpec.fromPath(Paths.get(".")), wrapper);
+    return new SchemaWrapper(OpenApiSpec.fromPath(Path.of(".")), wrapper);
   }
 }
